[gd_scene load_steps=10 format=3 uid="uid://djoxys77ftvr1"]

[ext_resource type="Script" uid="uid://dspovn1bwmtgr" path="res://load_screen/load_slot.gd" id="1_2bckr"]
[ext_resource type="AudioStream" uid="uid://ccdbiok202b11" path="res://sound/button_click.mp3" id="2_5md8o"]
[ext_resource type="AudioStream" uid="uid://nt58omx85e7" path="res://sound/button_hover.mp3" id="3_742xb"]

[sub_resource type="Gradient" id="Gradient_ce4xl"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pyxle"]
gradient = SubResource("Gradient_ce4xl")
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_ubt2c"]
offsets = PackedFloat32Array(0, 0.82, 1)
colors = PackedColorArray(0.364706, 0.819608, 0.941176, 1, 0.639216, 0.905882, 0.933333, 1, 0.929412, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_p506u"]
gradient = SubResource("Gradient_ubt2c")
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_rsb8p"]
offsets = PackedFloat32Array(0, 0.47, 1)
colors = PackedColorArray(0.639216, 0.905882, 0.933333, 1, 0.929412, 1, 1, 1, 0.639216, 0.905882, 0.933333, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8jygv"]
gradient = SubResource("Gradient_rsb8p")
fill_to = Vector2(0, 1)

[node name="LoadSlot" type="BaseButton"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 2
auto_translate_mode = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(690, 388)
layout_direction = 0
layout_mode = 3
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
localize_numeral_system = true
tooltip_text = ""
tooltip_auto_translate_mode = 0
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
disabled = false
toggle_mode = false
button_pressed = false
action_mode = 1
button_mask = 1
keep_pressed_outside = false
button_group = null
shortcut = null
shortcut_feedback = true
shortcut_in_tooltip = true
script = ExtResource("1_2bckr")
metadata/_custom_type_script = "uid://dspovn1bwmtgr"

[node name="AudioClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_5md8o")
bus = &"SFX"

[node name="AudioHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_742xb")
bus = &"SFX"

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(640, 360)
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="Outline" type="TextureRect" parent="CenterContainer"]
custom_minimum_size = Vector2(690, 388)
layout_mode = 2
texture = SubResource("GradientTexture2D_pyxle")
expand_mode = 1

[node name="HoverOutline" type="TextureRect" parent="CenterContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(690, 388)
layout_mode = 2
texture = SubResource("GradientTexture2D_p506u")
expand_mode = 1

[node name="PressedOutline" type="TextureRect" parent="CenterContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(690, 388)
layout_mode = 2
texture = SubResource("GradientTexture2D_8jygv")
expand_mode = 1

[node name="background" type="ColorRect" parent="CenterContainer"]
custom_minimum_size = Vector2(686, 384)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Screen" type="TextureRect" parent="CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(686, 384)
layout_mode = 2
expand_mode = 1
